--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Giga:wght@100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Giga:wght@100..900&family=Orbit&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
 :root {
     --purple-100-color: #F5EFFF;
@@ -18,5 +19,5 @@ a {
 }
 
 body {
-    font-family: "Lexend Giga", serif;
+    font-family: "Lexend Giga", "Orbit";
 }
